# IMDB-to-MP4

./: .gitignore  Cargo.toml  README.md
src/: downloader.rs  main.rs  scraper.rs  text_input.rs  tui.rs  vidsrc.rs
src/js/: decode_file_id.js  encoded_file_id_parser.js
