[package]
name = "movie-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.26.0"
regex = "1.10.3"
reqwest = { version = "0.11.23", features = ["blocking"] }
scraper = "0.18.1"
