[package]
name = "movie-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
indicatif = "0.17.8"
regex = "1.10.3"
reqwest = { version = "0.11.23", features = ["blocking"] }
scraper = "0.18.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"